11-23-2024
- add some keybinds to neovim
- add autopairs to neovim


11-22-2024
- added battery monitor service for dunst
- configuration for hostname resolution on the wireguard server
- telescope now can find buffers <leader>fb
- add lazygit


11-21-2024
- working treesitter
- working nix and lua lsp and formatter for neovim
- rocking gruvbox theme for neovim
- fixed clipboard issue in vim by place xclip on shell path
- moved desktop specific tools to nixos instead of HM, specifically xmodmap, and xclip are now global packages if i3 is enabled


11-19-2024
- bit off way more than I could ever chew with neovim so going back to vscode and working on vim on the side.
- add a todo list to vim in readme


11-18-2024
- fixed error with yazi launching using the FM keybind $Mod+m in i3


11-17-2024
- documented some Hm modules
- switched to neovim
- neovim configuration for HM (#not copied)
- update flake input "icons"


11-16-2024
- fix dates in changelog.txt (whoops)
- added a small ledger module for ledger crypto wallets (udev rules and leger live desktop)
- enabled brave for cypher due to metamask not being supported on firefox
- enabled filezilla for FTP transfers
- fixed yazi, (shell alias is "yy") will now properly shell into the directory left off in yazi
- replaced traceroute package with busybox (includes traceroute alongside some more tools)


11-15-2024
- lost the mc121 world while reinstalling (whoops)
- DNS for all servers
- add alts to blueprints whitelist


11-14-2024
- finished wireguard setup
- enable DNS for servers routing through the tunnel
- remove wireguard server from configuration
- installed arch on tater
- enabled google-chrome on garth (temporary)


11-13-2024
- added tcpdump and traceroute commands to all machines


11-11-2024
- remove wireguard server as its just easier to do it on the actual router. the configuration will still be present although unused