@@ -1,6 +1,4 @@
 # various public keys
 {
   g_pub = "ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIKNRHd6NLt4Yd9y5Enu54fJ/a2VCrRgbvfMuom3zn5zg";
-  cypher_wireguard = "CZvnEsivl9osBYtVmtGiu33fvkhlifMdTBWb+/xaEkE=";
-  wireguard_server_school = "PMxNloIPW9xEROdyZAbPl6CtkrCqSRIZmkcqj9MK5lk=";
 }
