@@ -4,8 +4,12 @@ require("core.options")
 require("plugins.telescope")
 require("plugins.treesitter")
 require("plugins.autopairs")
+require("plugins.harpoon")
+require("plugins.undotree")
+require("plugins.fugitive")
 
-require("themes.gruvbox")
+--require("themes.gruvbox")
+require("themes.vague")
 
 require("lsp.nil")
 require("lsp.lua_ls")
