@@ -1,0 +1,2 @@
+vim.keymap.set("n", "<leader>gs", vim.cmd.Git)
+
