@@ -1,0 +1,2 @@
+vim.o.background = "dark"
+vim.cmd.colorscheme "vague"
