@@ -1,3 +1,11 @@
+11-24-2024
+- more vim plugins:
+  - harpoon
+	- vim-fugitive
+	- undotree
+- new vim theme "vague"
+
+
 11-23-2024
 - add some keybinds to neovim
 - add autopairs to neovim
